--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -46,24 +46,24 @@ h3 {
 
 }
 .btn-red {
-  padding: 10px 10px;
+  padding: 6px 6px;
   text-align: center;
   border-radius: 15px;
   background-color: #a51b0b;
 }
 .btn-red:hover {
-  background-color: white;
-  border: 1px solid black;
+  background-color: #c4c4c4;
+
 }
 .btn-green {
-  padding: 10px 10px;
+  padding: 6px 6px;
   text-align: center;
   border-radius: 15px;
   background-color: #228b22;
 }
 .btn-green:hover {
-  background-color: white;
-  border: 1px solid black;
+  background-color: #c4c4c4;
+
 }
 
 .title {
