--- a/static/transacao.css
+++ b/static/transacao.css
@@ -1,10 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+*{
+    box-sizing: border-box;
+}
+body{
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
 body {
   background: #fff;
-
   height: 100%;
-
   background-repeat: no-repeat;
-  background-size: 100% 100%;
 }
 
 .card {
@@ -71,10 +79,3 @@ button:focus {
   box-shadow: none !important;
   outline-width: 0;
 }
-/*
-.btn-danger{
-    background: #a51b0b;
-}
-.btn-success{
-    background:	#228B22;
-}*/
