--- a/templates/Saldo.html
+++ b/templates/Saldo.html
@@ -1,124 +1,112 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transações</title>
 
-    <!-- CSS only -->
-    <link
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Transações</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='transacao.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}">
+  <!-- <link rel="stylesheet" href="static/style.css" /> -->
+  <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <!--<link rel="stylesheet" href="static/style.css" />-->
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='transacao.css') }}"
-    />
-    <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}">
 
-    <link
+  <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
     />
-
-    <!-- JavaScript Bundle with Popper -->
-    <script
+  <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
 </head>
 {% block conteudo %}
+
 <body>
-
-    <div class="side-menu">
-      <div class="brand-name">
-        <h1>Finanças S.A</h1>
-      </div>
-      <ul>
-        <li>
-          <a href="{{ url_for('index')}}"
-            ><img src="img/house-door-fill.svg" />&nbsp;Inicio</a
-          >
-        </li>
-        <li>
-          <a href="{{url_for('transacoes')}}"
-            ><img src="img/arrow-up (1).svg"  />&nbsp;Transações</a
-          >
-        </li>
-        <li>
-          <a href="{{url_for('despesas')}}"><img src="" />&nbsp;Despesas</a>
-        </li>
-        <li>
-          <a href="{{url_for('saldo')}}"
-            ><img src="img/person-fill.svg" />&nbsp;Inserir Saldo</a
-          >
-        </li>
-        <li>
-          <a href="#"><img src="img/person-fill.svg" />&nbsp;Minha conta</a>
-        </li>
-        <li>
-          <a href="{{url_for('logout')}}"
-            ><img src="img/x-lg.svg" />&nbsp;Sair</a
-          >
-        </li>
-      </ul>
+  <div class="side-menu">
+    <div class="brand-name">
+      <h1>Finanças S.A</h1>
     </div>
+    <ul>
+      <li>
+        <a href="{{ url_for('index')}}"><img src="img/house-door-fill.svg" />&nbsp;Inicio</a>
+      </li>
+      <li>
+        <a href="{{url_for('transacoes')}}"><img src="img/arrow-up (1).svg" />&nbsp;Transações</a>
+      </li>
+      <li>
+        <a href="{{url_for('despesas')}}"><img src="" />&nbsp;Despesas</a>
+      </li>
+      <li>
+        <a href="{{url_for('saldo')}}"><img src="img/person-fill.svg" />&nbsp;Inserir Saldo</a>
+      </li>
+      <li>
+        <a href="#"><img src="img/person-fill.svg" />&nbsp;Minha conta</a>
+      </li>
+      <li>
+        <a href="{{url_for('logout')}}"><img src="img/x-lg.svg" />&nbsp;Sair</a>
+      </li>
+    </ul>
+  </div>
 
-    <div class="container-fluid px-1 py-5 mx-auto">
-        <div class="row d-flex justify-content-center">
-            <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-                
-                <div class="card">
-                    <h2 class="text-center mb-2 preto">{{ titulo }}</h2>
-                    <form class="form-card" method="POST" action="/salvarSaldo">
-                        <div class="row justify-content-between text-left">
-                            <div class="form-group col-sm-6 flex-column d-flex">
-                                 <label  class="form-control-label px-3">Tipo<span class="text-danger"> *</span></label>
-                                  <input list="x" type="text" id="tipo" name="tipo"  placeholder="Fixa ou Extra">
-                                <datalist  id="x">
-                                  <option value="Fixa"></option>
-                                  <option value="Extra"></option>
-                                </datalist>
-                            </div>
+  <div class="container-fluid px-1 py-5 mx-auto">
+    <div class="row d-flex justify-content-center">
+      <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
 
-                            <div class="form-group col-sm-6 flex-column d-flex"> 
-                                <label class="form-control-label px-3">Valor<span class="text-danger"> *</span></label> 
-                                <input type="text" id="valor" name="valor"  placeholder="Digite um valor"> </div>
-                        </div>
+        <div class="card">
+          <h2 class="text-center mb-2 preto">{{ titulo }}</h2>
+          <form class="form-card" method="POST" action="/salvarSaldo">
+            <div class="row justify-content-between text-left">
+              <div class="form-group col-sm-6 flex-column d-flex">
+                <label class="form-control-label px-3">Tipo<span class="text-danger"> *</span></label>
+                <input list="x" type="text" id="tipo" name="tipo" placeholder="Fixa ou Extra">
+                <datalist id="x">
+                  <option value="Fixa"></option>
+                  <option value="Extra"></option>
+                </datalist>
+              </div>
 
-                        <!-- <div class="row justify-content-between text-left">
-                            <div class="form-group col-sm-12 flex-column d-flex"> 
-                                <label class="form-control-label px-3">Quantia total<span class="text-danger"> *</span></label> 
-                                <input type="number" id="qtotal" name="categoria" placeholder="Quantia total"> 
-                            </div> -->
-                                 
-                          <div class="row justify-content-between text-left">
-                            
-                               <div class="form-group col-sm-6 flex-column d-flex">
-                                 
-                                   
-                                 
-                                <button class="btn btn-red">
-                                  <a id="branco" href="{{ url_for('index')}}"><i class="bi bi-x"></i>Cancelar</a> 
-                                </button>
-                               </div>
-                               <div class="form-group col-sm-6 flex-column d-flex"> 
-                                    <button class="btn btn-green">
-                                     <i class="bi bi-check"></i> Criar
-                                 </button>
-                                </div>
-                               </form>
-                 
-                          </div>
-                         </div>
+              <div class="form-group col-sm-6 flex-column d-flex">
+                <label class="form-control-label px-3">Valor<span class="text-danger"> *</span></label>
+                <input type="text" id="valor" name="valor" placeholder="Digite um valor">
+              </div>
             </div>
+
+            <!-- <div class="row justify-content-between text-left">
+                            <div class="form-group col-sm-12 flex-column d-flex">
+                                <label class="form-control-label px-3">Quantia total<span class="text-danger"> *</span></label>
+                                <input type="number" id="qtotal" name="categoria" placeholder="Quantia total">
+                            </div> -->
+
+            <div class="row justify-content-between text-left">
+
+              <div class="form-group col-sm-6 flex-column d-flex">
+
+
+
+                <button class="btn btn-red">
+                  <a id="branco" href="{{ url_for('index')}}"><i class="bi bi-x"></i>Cancelar</a>
+                </button>
+              </div>
+              <div class="form-group col-sm-6 flex-column d-flex">
+                <button class="btn btn-green">
+                  <i class="bi bi-check"></i> Criar
+                </button>
+              </div>
+          </form>
+
         </div>
+      </div>
     </div>
-    {%endblock %}
+  </div>
+  </div>
+  {%endblock %}
 </body>
+
 </html>
