--- a/templates/entradas.html
+++ b/templates/entradas.html
@@ -8,22 +8,23 @@
   <title>Entradas</title>
 
   <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" />
   <link rel="stylesheet" href="{{ url_for('static', filename='transacao.css') }}" />
+<!-- 
 
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" /> 
 
   <script src="{{ url_for('static', filename='jquery-3.6.0.js') }}"></script>
   <script src="{{ url_for('static', filename='teste.js') }}"></script>
 
-  <!-- JavaScript Bundle with Popper -->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="{{ url_for('static', filename='jquery-3.6.0.js') }}"></script>
   <script src="{{ url_for('static', filename='teste.js') }}"></script>
-  <script src="{{ url_for('static', filename='jquery.mask.js') }}"></script>
+  <script src="{{ url_for('static', filename='jquery.mask.js') }}"></script> -->
 </head>
 
 <body>
